# shepherd

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  ruff.toml
commons-vcs/: README.md  pyproject.toml
commons-vcs/src/commons_vcs/: __init__.py  _types.py  canonical.py  kernel.py
commons-vcs/src/commons_vcs/backends/: __init__.py  _protocol.py  git.py  memory.py
commons-vcs/tests/: conftest.py  test_backends.py  test_canonical.py  test_git_index_concurrency.py  test_git_pin_refs.py  test_git_recovery.py  test_object_identity.py  test_repo_hardening.py  test_scope_locks.py  test_smoke_against_git.py  test_spike2_recovery.py
commons-vcs/tests/support/: __init__.py  coordinator.py  filesystem_substrate.py  oracle.py  spike2_coordinator.py
commons-vcs/tests/support/profiles/: __init__.py  sgc_stub.py  shepherd.py  vcscore.py
commons-vcs/tests/vectors/: commons_canonical_v1.json
shepherd2/: README.md  pyproject.toml
shepherd2/docs/: kernel-abi-v0.md  shepherd-concept-inventory.md  slice-semantics.md
shepherd2/src/shepherd2/: __init__.py  canonical.py  execution.py  facts.py  history.py  relations.py  schema_library.py  substrates.py  trace_store.py
shepherd2/src/shepherd2/kernel/: __init__.py  canonical.py  facts.py
shepherd2/src/shepherd2/runtime/: __init__.py  handles.py
shepherd2/src/shepherd2/schemas/: __init__.py  execution.py  history.py  relations.py  run_outputs.py  schema_library.py
shepherd2/tests/: test_canonical.py  test_execution_schema.py  test_history.py  test_import_boundaries.py  test_kernel_abi_v0.py  test_kernel_abi_v0_laws.py  test_materialize.py  test_public_facade_inventory.py  test_relation_schema.py  test_run_outputs_schema.py  test_runtime.py  test_skeleton_imports.py  test_slice_a.py  test_trace_store.py  test_trace_store_conformance.py
shepherd2/tests/golden/: kernel_abi_v0.json
(+413 files in other folders)
