[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shepherd2"
version = "0.1.0a0"
description = "Trace-first Shepherd kernel prototype"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
]
typing = [
    "mypy>=1.10.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shepherd2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -q"
